[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

[lib] 
path = "src/lib.rs"

[[bin]] 
path = "src/main.rs" 
name = "rust-web"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = {version = "1", features = ["full"]}
reqwest = "0.11"
serde = {version = "1", features = ["derive"]}